[package]
name = "libtopo"
version = "0.1.0"
edition = "2024"
description = "Idiomatic Rust bindings for illumos libtopo"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/libtopo"

[dependencies]
libtopo-sys = { version = "0.1.0", path = "../libtopo-sys" }
illumos-nvpair = "0.4"
thiserror = "2"
